fix: 🐛 Move Optimonk banner down by setting its z-index

--- a/style.css
+++ b/style.css
@@ -158,6 +158,10 @@ mark[style="background-color:rgba(0, 0, 0, 0)"] {
   padding-top: 0;
 }
 
+.om-holder {
+  z-index: 99;
+}
+
 .top-navigation {
   font-family: var(--font-family-secondary), sans-serif;
   -webkit-box-align: center;
